--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ main: me.saurpuss.lemonaid.Lemonaid
 authors: [SaurPuss]
 description: Lots of basic commands put together in one plugin
 website: https://voxmc.com
-softdepend: [Vault]
+softdepend: [Vault, World Guard]
 
 commands:
   # Plugin specific commands
@@ -21,7 +21,7 @@ commands:
   # Chat commands
   msg:
     description: Whisper to another player
-    usage: </command> [target] message
+    usage: /<command> [target] message
     default: true
     aliases: [tell, whisper]
     permission: lemonaid.chat.private
@@ -32,6 +32,21 @@ commands:
     default: true
     aliases: [r]
     permission: lemonaid.chat.private
+    permission-message: You do not have permission to do this
+  busy:
+    description: Prevent incoming whispers and tp requests
+    usage: /<command>
+    default: true
+    aliases: [dnd]
+    permission: lemonaid.chat.busy
+    permission-message: You do not have permission to do this
+  ignore:
+    description: Ignore all messages and tp requests from another player
+    usage: |
+      /<command> - Display your ignored list
+      /<command> [target] - Add or remove your target from your ignore list
+    default: true
+    permission: lemonaid.chat.ignore
     permission-message: You do not have permission to do this
   localchat:
     description: Talk to the players within earshot
@@ -106,9 +121,28 @@ commands:
     description: Broadcast a message across the server
     usage: /<command> message
     default: OP
-    permission: lemonaid.admin.broadcast
-    permission-message: You do not have permission to do this
     aliases: [bc]
+    permission: lemonaid.admin.broadcast
+  cuff:
+    description: Lock an offending player in place and prevent them from using chat.
+    usage: |
+      /<command> [log] - Show a log of cuffs
+      /<command> [target] - Toggle cuff on and off for your target
+      /<command> [target] [time] - Cuff a player for an amount of time
+      /<command> [target] [time] [reason] - Cuff a player for an amount of time and log the reason
+    default: OP
+    permission: lemonaid.admin.cuff
+  mute:
+    description: Prevent a player from speaking
+    usage: |
+      /<command> [log] - Show a log of mutes
+      /<command> [target] - Mute player indefinitely, apply again to unmute
+      /<command> [target] [time] - Mute a player for a specific amount of time
+      /<command> [target] [time] [reason] - Mute a player for a specific amount of time and log the reason
+      /<command> [target] [reason] - Mute a player indefinitely for a specific reason
+    default: OP
+    permission: lemonaid.admin.mute
+
 
 
 
@@ -121,6 +155,9 @@ permissions:
       lemonaid.admin.broadcast: true
       lemonaid.admin.reload: true
       lemonaid.admin.notify: true
+      lemonaid.admin.cuff: true
+      lemonaid.admin.mute: true
+      lemonaid.admin.jail: true
   lemonaid.admin.notify.*:
     description: Notifications for moderators on specific event
     default: OP
@@ -128,6 +165,8 @@ permissions:
       lemonaid.admin.notify.login: true
       lemonaid.admin.notify.logout: true
       lemonaid.admin.notify.kick: true
+      lemonaid.admin.notify.mute: true
+      lemonaid.admin.notify.cuff: true
   lemonaid.chat.*:
     description: |
       Permissions for different chats. Toggle if you prefer to
@@ -137,6 +176,8 @@ permissions:
       lemonaid.chat.local: true
       lemonaid.chat.private: true
       lemonaid.chat.colors: true
+      lemonaid.chat.busy: true
+      lemonaid.chat.ignore: true
 #      lemonaid.chat.party: true
   lemonaid.teleport.*:
     description: Permissions for teleportation
