cleaned up some code

--- a/Lemonaid_1_13_2/pom.xml
+++ b/Lemonaid_1_13_2/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.saurpuss</groupId>
-    <artifactId>lemonaid-1.13.2</artifactId>
+    <artifactId>Lemonaid-1.13.2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
