added homes and ignore baseline

--- a/Lemonaid_1_13_2/src/main/resources/config.yml
+++ b/Lemonaid_1_13_2/src/main/resources/config.yml
@@ -8,7 +8,7 @@ mysql: false
   port: ''
   user: ''
   password: ''
-  table: 'lemonaid'
+  table-prefix: 'lemonaid'
 
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-#
 #   - Custom Server List Options -
