cleanup of broadcast, fly and recap + same for the 1.14 module

--- a/Lemonaid_1_13_2/src/main/resources/plugin.yml
+++ b/Lemonaid_1_13_2/src/main/resources/plugin.yml
@@ -15,6 +15,7 @@ commands:
       /<command> reload - Reload the plugin configs
       /<command> ?|help - Plugin help file
     default: OP
+    aliases: [lemon]
     permission: lemonaid.admin.reload
     permission-message: You do not have permission to do this
 
