--- a/Lemonaid_1_13_2/src/main/resources/config.yml
+++ b/Lemonaid_1_13_2/src/main/resources/config.yml
@@ -8,7 +8,8 @@ mysql: false
   port: ''
   user: ''
   password: ''
-  table-prefix: 'lemonaid'
+  database: ''
+  table-prefix: 'lemonaid_'
 
 #-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-#
 #   - Custom Server List Options -
